--- a/findly-builder/src/app/components/credentials-list/credentials-list.component.html
+++ b/findly-builder/src/app/components/credentials-list/credentials-list.component.html
@@ -53,7 +53,8 @@
                 <div class="col-3 title">{{"credentials.last_updated" | translate}}<img src="assets/icons/dropdown_gray.svg" class="ml-1"></div>
                 <div class="col-3 title">{{"credentials.last_updated_by" | translate}}</div>
             </div>
-            <div class="table-body-content row m-0 align-items-center" *ngFor="let data of channnelConguired | filter :[searchcredential, 'appName']">
+            <div class="table-body-content row m-0 align-items-center" *ngFor="let data of channnelConguired | filter :[searchcredential, 'appName']" >
+                <!-- (click)="viewDetails()" -->
                 <div class="col-3 title">{{data.appName}}</div>
                 <div class="col-3 title">{{data.appUsage}}</div>
                 <div class="col-3 title">{{data.lastModifiedOn | dateFormatPipe: 'MM-DD-YYYY hh:mm A'}}</div>
@@ -154,7 +155,7 @@
                     <input type="checkbox" [(ngModel)]="editCreden.enabled">
                     <div class="slider"><span class="enabled">{{"credentials.push_notifications_enabled" | translate}}</span><span class="disabled">{{"credentials.push_notifications_enabled" | translate}}</span></div>
                 </label>
-            </div>        
+            </div>
         </div>        
         <div class="modal-footer">
             <button class="kr-sg-button-primary btn_lg" (click)="saveEditCredential()" >{{"credentials.save"| translate}}</button>
