st enabled & image hidden

--- a/findly-builder/src/app/components/add-faq/add-faq.component.html
+++ b/findly-builder/src/app/components/add-faq/add-faq.component.html
@@ -178,7 +178,7 @@
               </div>
             </label>
           </div> -->
-          <div class="kr-sg-input-text mb-2 mt-3"> 
+          <div class="kr-sg-input-text mb-2 mt-3 d-none"> 
              <!-- image optional preview related changes -->
              <div class="d-flex justify-content-between align-items-center">
               <div class="label-text w-100">{{"addFaq.image_optional" | translate}} </div>
