pricing issues done

--- a/findly-builder/src/app/helpers/components/upgrade-plan/upgrade-plan.component.scss
+++ b/findly-builder/src/app/helpers/components/upgrade-plan/upgrade-plan.component.scss
@@ -83,13 +83,10 @@
                                     background: #EAF6EC !important;                                    
                                     border: 1px solid #135423;
                                     box-sizing: border-box;                                    
-                                    .kr-sg-button-secondary{
-                                        display: none;
-                                    }
+                                    // .kr-sg-button-secondary{
+                                    //     display: none;
+                                    // }
                                 }
-                                // .goto_details{
-                                //     display: block;
-                                // }
                             }                            
                         }
                         .main-content{
