--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -2,7 +2,7 @@
 <div class="sidebar-fixed position-fixed activeMenu" *ngIf="show">
 	<ng-container *ngIf="!settingMainMenu && !sourceMenu || sourceMenu">
 		<div class="upgrade_your_plan_price" [ngClass]="{'d-none':showUpgrade}">
-			<span class="status-type" [ngClass]="{'red':usageDetails?.ingestDocs==100||usageDetails.searchQueries==100}"></span>
+			<span class="status-type" [ngClass]="{'red':usageDetails?.ingestDocs>=80||usageDetails.searchQueries>=80}"></span>
 			<div class="upgrade-plan-btn" (click)="upgrade()">Upgrade Your Plan<img src="assets/icons/pricing/carrotright.svg"></div>
 
 			<div class="hover-documnet-show-data">
@@ -21,7 +21,7 @@
 						</div>						
 					</div>
 					<ng-container>
-						<ngb-progressbar height="10px" [type]="usageDetails?.searchQueries<80?'warning':'danger'" [value]="usageDetails?.searchQueries" max="100"></ngb-progressbar>
+						<ngb-progressbar height="10px" [type]="usageDetails?.searchQueries==100?'danger':usageDetails?.searchQueries<=80?'primary':'warning'" [value]="usageDetails?.searchQueries" max="100"></ngb-progressbar>
 					</ng-container>						
 				</div>
 				<div class="card-data- card2">
@@ -39,7 +39,7 @@
 						</div>						
 					</div>
 					<ng-container>
-						<ngb-progressbar height="10px" [type]="usageDetails?.ingestDocs<80?'warning':'danger'" [value]="usageDetails?.ingestDocs" max="100"></ngb-progressbar>
+						<ngb-progressbar height="10px" [type]="usageDetails?.ingestDocs==100?'danger':usageDetails?.ingestDocs<=80?'success':'warning'" [value]="usageDetails?.ingestDocs" max="100"></ngb-progressbar>
 					</ng-container>		
 				</div>
 			</div>
