facets info message display if field type change issue fixed

--- a/findly-builder/src/app/components/facets/facets.component.html
+++ b/findly-builder/src/app/components/facets/facets.component.html
@@ -246,7 +246,7 @@
                             <div class="mr-1"><img src="assets/icons/info-blue.svg"></div>
                             <div class="tost-text">{{selectedField.fieldName}} is not indexed</div>
                         </div>
-                        <div class="mt-2 kr-sg-inline-notification" *ngIf="selectedFieldId === selectedField?.fieldId && addEditFacetObj?.showFieldWarning && addEditFacetObj?.showFieldWarning !== 'NOT_INDEXED'">
+                        <div class="mt-2 kr-sg-inline-notification" *ngIf="selectedFieldId === selectedField?.fieldId && addEditFacetObj?.showFieldWarning && addEditFacetObj?.showFieldWarning !== 'NOT_INDEXED' && addEditFacetObj?.showFieldWarning !== 'false'">
                             <div class="mr-1"><img src="assets/icons/info-blue.svg"></div>
                             <div class="tost-text">{{addEditFacetObj?.showFieldWarning}}</div>
                         </div>
