--- a/findly-builder/src/app/components/faq-source/faq-source.component.scss
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.scss
@@ -1700,6 +1700,10 @@
                         color: #DD3646;
                     }
                 }
+                .failed {
+                    width: 16px;
+                    height: 16px;
+                }
                 .inProgress{
                     width: 20px;
                     height: 20px;
