--- a/findly-builder/src/app/components/settings/settings.component.html
+++ b/findly-builder/src/app/components/settings/settings.component.html
@@ -49,7 +49,7 @@
                             <!-- <li (click)="disableCredential()"><a (click)="enableConfiguration = !enableConfiguration"> Disable</a></li> 
                             <li *ngIf="!enableConfiguration = enableConfiguration" (click)="configureCredential()"><a> Enable</a></li>  -->
                             <!-- <li><a (click)="enableConfiguration = !enableConfiguration) ? disableCredential()">Enaable</a></li> -->
-                            <li (click) = "deleteChannel()"><a>{{"settings.delete" | translate}} </a></li>               
+                            <li  class="d-none"(click) = "deleteChannel()"><a>{{"settings.delete" | translate}} </a></li>               
                         </ul>
                     </div>
                 </div>
@@ -255,7 +255,8 @@
             </div>
         </div>
     </perfect-scrollbar>
-    <div class="footer-sec" [ngClass]=" {'blur':!enableConfiguration }">
+    <!-- [ngClass]=" {'blur':!enableConfiguration }" -->
+    <div class="footer-sec" >
         <div class="btn-sec">
             <div>
                 <button *ngIf="!existingCredential" class="kr-sg-button-secondary btn_lg" (click)="cancel()">{{"settings.cancel" | translate}} </button>
