--- a/findly-builder/src/app/components/settings/settings.component.scss
+++ b/findly-builder/src/app/components/settings/settings.component.scss
@@ -501,6 +501,9 @@
     }
     .credentials-dropdown{
         .dropdown-open {
+            .dropdown-input{
+                font-weight: 600;
+            }
             .content-menu{
                 background: #FFFFFF;
                 box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.31);
