workbench simulator search ui code changes

--- a/findly-builder/src/app/components/index/index.component.html
+++ b/findly-builder/src/app/components/index/index.component.html
@@ -815,7 +815,7 @@
         </div>
     </div>
       <div class="close_icon">
-          <span [ngClass]="{'d-none': showSearch}" (click)="showSearch=!showSearch;focusinSearch('fieldSearchId')" class="mr-3" id="btn_toggle_search_structured_data" ><img src="assets/icons/search_gray_bg.png" class="search-icon" [ngClass]="{'d-none': showSearch}"></span>
+          <span [ngClass]="{'d-none': showSearch}" (click)="showSearch=!showSearch;focusinSearch('fieldSearchId')" class="search-mr" id="btn_toggle_search_structured_data" ><img src="assets/icons/search_gray_bg.png" class="search-icon" [ngClass]="{'d-none': showSearch}"></span>
         <img src="assets/images/close.svg" (click)="closeSimulator()" />
       </div>
     </div>
