FLY-2769 In the Invoice landing screen, Text below image is blurred issue fixed

--- a/findly-builder/src/app/components/invoices/invoices.component.html
+++ b/findly-builder/src/app/components/invoices/invoices.component.html
@@ -24,7 +24,7 @@
             <div class="img-block">
                 <img src="assets/icons/invoices/invoice-empty-log.png">
             </div>
-            <!-- <div class="empty-text">After subscribing to any of the plans offered, your invoices will appear here</div> -->
+            <div class="empty-text">{{"invoices.after_subscribing_to_any_of_the_plans_offered_your_invoices_will_appear_here" | translate}}</div>
         </div>
     </ng-container>
 
