usage-log png image replaced with quality image

--- a/findly-builder/src/app/components/usage-log/usage-log.component.scss
+++ b/findly-builder/src/app/components/usage-log/usage-log.component.scss
@@ -180,12 +180,15 @@
         justify-content: center;
         flex-direction: column;
         height: calc(100vh - 140px);
+        .img-block img{
+            width: 408px;
+        }
         .empty-text{
             color: #3C4043;
             font-weight: 600;
             font-size: 18px;
             line-height: 20px;
-            margin-top: -34px;
+            margin-top: 20px;
         }
     }
 }
