FLY-2745 issue fixed

--- a/findly-builder/src/app/components/app-experiments/app-experiments.component.html
+++ b/findly-builder/src/app/components/app-experiments/app-experiments.component.html
@@ -206,13 +206,13 @@
                         {{ expCol.code }}
                       </div>
                       <div class="name">
-                        {{ expCol.name | titlecase }}</div>
+                        {{ expCol.name }}</div>
                     </div>
                     <div class="col-2 title">
-                      {{ expCol.indexPipelineName | titlecase }}
+                      {{ expCol.indexPipelineName }}
                     </div>
                     <div class="col-2 title">
-                      {{ expCol.queryPipelineName | titlecase }}
+                      {{ expCol.queryPipelineName }}
                     </div>
                     <div class="col-1 title">{{ expCol.trafficPct }}%</div>
                     <div class="col-1 title">{{ expCol.users || 0 }}</div>
