--- a/findly-builder/src/app/components/summary/summary.component.scss
+++ b/findly-builder/src/app/components/summary/summary.component.scss
@@ -136,6 +136,7 @@
                     cursor: pointer;
                 }
                 .skelton-img{
+                    margin-bottom: 16px;
                     .skelton-img{
                         img{
                             margin-bottom: 16px;
@@ -209,7 +210,7 @@
                     min-height: 50px;
                     align-items: center;
                     .title{
-                        padding: 0 10px;
+                        padding: 0;
                         font-weight: normal;
                         font-size: 14px;
                         line-height: 17px;
@@ -276,7 +277,7 @@
                     font-size: 14px;
                     line-height: 20px;
                     color: #0D6EFD;
-                    cursor: pointer;
+                    //cursor: pointer;
                     right: 25px;
                     top: 20px;
                 }   
