--- a/findly-builder/src/app/components/summary/summary.component.html
+++ b/findly-builder/src/app/components/summary/summary.component.html
@@ -1,12 +1,12 @@
 <app-useronboarding-journey #onboard [componentType]='componentType' *ngIf="showOverview"></app-useronboarding-journey>
-<div class="over-view-config-tour" *ngIf="!showOverview">
+<!-- <div class="over-view-config-tour" *ngIf="!showOverview">
   <div class="tour-header">
     <div class="title">{{'overview.overview' | translate}} </div>
     <div class="close-tour"><img src="assets/icons/close-white.svg" (click)="openOnBoardingModal()"></div>
   </div>
   <div class="tour-info">{{'overview.tour_info' | translate}}</div>
   <button class="kr-sg-button-primary btn_lg" (click)="openOnBoardingModal()">{{'overview.gotIt' | translate}}</button>
-</div>
+</div> -->
 
 
 <perfect-scrollbar class="scroll-data-overview">
